@@ -1,3 +1,8 @@
+2004-02-20  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/desktop.h (sp_desktop_zoom_relative_keep_point,
+	sp_desktop_scroll_world): Add NR::Point version.
+
 2004-02-19  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/Makefile.am: sp-item-rm-unsatisfied-cns.cpp,
